# BazaarHelper

./: .gitignore  README.md  README_CN.md  debug.html  deploy.ps1  fire_elemental_template.json  index.html  item_吐司机.json  monster_crawler.py  monster_output.json  package-lock.json  package.json  pyro_corrected.json  update.json
.github/: RELEASE.md
.github/workflows/: release.yml
scripts/: add_event_image_paths.py  add_item_skill_images.py  check_comprehensive_images.py  check_event_images.py  check_image_paths.py  check_item_images.py  check_missing_templates.py  check_unmapped_monsters.py  cleanup_monsters_db.py  compose_monster_images.py  compress_images.py  convert_event_images_to_webp.py  convert_gui_images.py  convert_lostcrate.py  convert_skill_pngs_to_webp.py  copy_missing_frontline.py  copy_skill_images.py  copy_skill_images_report.json  download_event_choice_icons.py  download_image_tool.py  download_missing_event_images.py  download_missing_items_helper.py  download_monster_assets.py  enrich_monsters_id.py  extract_event_features.py  extract_event_images.py  extract_tags_for_ui.py  fill_missing_images.py  fill_monster_ids.py  final_rename_all.py  find_missing_item_images.py  fix_translation_seconds.py  fix_translation_seconds_v2.py  generate_event_features.py  interactive_rename_monsters.py  manual_mapping.json  manual_rename_remaining.py  merge_monster_info.py  missing_images_report.json  missing_item_images.json  (+20 more)
src/: App.css  App.tsx  OverlayApp.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json  tauri.key.pub  tauri_new.key  tauri_new.key.pub
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: card_appearance_probability.json  card_id_mapping.json  combat_encounters.json  event_detail.json  event_encounters.json  images_monster_map.json  items_db.json  items_db.json.bak  items_db_bak.json  items_export.json  items_export_20260116_182831.csv  items_export_20260116_194716.csv  missing_images.txt  monster_skills_db.json  monsters_db.json  monsters_export.csv  monsters_export.json  skills_export.json  v2_cards_id_to_chinese.json
src-tauri/scripts/: bundle_onnxruntime_macos.sh
src-tauri/src/: batch_compare_encounters.py  batch_results.json  clip.py  compare.py  compare_retired.py  crop_focus.py  example.py  lib.rs  list_missing_names.py  missing_namezh.json  monster_recognition.rs  monster_recognition_old_backup.rs  monster_recognition_opencv.rs  split_three.py  test_opencv.py
src/hooks/: useDraggable.ts
