[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1.10"
tokio = { version = "1", features = ["time"] }

tauri-plugin-process = "2"

# 图像处理和截图
xcap = "0.0.11"  # 跨平台截图
image = "0.25"   # 图像处理（裁剪、缩放等）
imageproc = "0.25"  # 图像处理算法 (保留用于调试工具)
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
rayon = "1.10"
bincode = "1.3"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse"] }

# OpenCV 核心绑定 (用于 ORB 特征匹配)
opencv = "0.92"
